# boomer-py

./: .copier-answers.yml  .gitignore  404.html  CBORG-CODE.md  CLAUDE.md  Makefile  README.md  index.html  justfile  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ai.yml  claude.yml  deploy-docs.yaml  dragon-ai.yml  main.yaml  pypi-publish.yaml
analysis/: README.md  brain_benchmark_notebook.ipynb  brain_benchmark_summary.md  brain_ontology_benchmark.py
analysis/brain/: Makefile  Prepare.ipynb  z
api/cli/: index.html
api/io/: index.html
api/loaders/: index.html
cli/: index.html
contributing/: index.html
datamodel/: index.html
datasets/: index.html
docs/: cli.md  contributing.md  datamodel.md  datasets.md  evaluation.md  examples.md  formats.md  getting-started.md  grid-search.md  index.md  ontology-conversion.md  partitioning.md  ptables.md  reasoning.md  search.md
evaluation/: index.html
examples/: index.html
formats/: index.html
getting-started/: index.html
grid-search/: index.html
manuscript/: index.html
notebooks/: evaluation_tutorial_executed.ipynb
ontology-conversion/: index.html
partitioning/: index.html
ptables/: index.html
reasoning/: index.html
scripts/: pairs2ptable.pl
search/: index.html  search_index.json
tests/: test_cli.py  test_cli_grid_search.py  test_cli_snapshots.py  test_evaluator.py  test_grid_search.py  test_io.py  test_loaders.py  test_obographs_renderer.py  test_ontology_converter.py  test_reasoner.py  test_search.py  test_splitter.py  test_sssom_converter.py  test_sssom_renderer.py
(+115 files in other folders)
