[project]
name = "boomer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chris Mungall", email = "cjm@berkeleybop.org" }
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "networkx>=3.2.1",
    "pandas",
    "papermill>=2.6.0",
    "py-horned-owl>=1.0.0",
    "pydantic>=2.11.4",
    "pyyaml>=6.0.2",
]

[tool.uv]
package = true

[project.scripts]
boomer-cli = "boomer.cli:main"
pyboomer = "boomer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.5",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.5",
    "jupyter",
    "nbformat>=5.10.4",
    "matplotlib>=3.10.6",
    "mknotebooks>=0.8.0",
    "pandas>=2.3.0",
]
